[package]
authors = ["pjmp"]
categories = ["command-line-utilities"]
description = "prettier dnf copr helper, search and install copr packages"
edition = "2021"
exclude = ["py/*", "dist/*", "pyproject.toml"]
homepage = "https://github.com/pjmp/coopr"
keywords = ["dnf", "copr", "coopr", "fedora"]
license = "MIT OR Apache-2.0"
name = "coopr"
readme = "README.md"
repository = "https://github.com/pjmp/coopr"
resolver = "2"
version = "0.2.0"

[dependencies]
colored = "2.0.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
ureq = {version = "2.4.0", default-features = false, features = ["tls", "json"]}

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
